# LogLead

./: .env.sample  .gitignore  CITATION.cff  LICENSE  MANIFEST.in  PYPI_README.md  README.md  albert_embedding.py  anomaly_detection.py  basebert_embedding.py  bertembedding.py  debug_hadoop_data.py  drain3_no_masking.ini  enricher.py  environment.yml  environment_expl.yml  environment_no_dl.yml  environment_win64_no_dl.yml  loader.py  loglead_demo_ad_event.py  loglead_demo_ad_seq.py  loglead_demo_anomaly_detection.py  loglead_demo_gelf_log.py  loglead_demo_log_investigation.py  loglead_demo_neural_parser.py  loglead_demo_parsed_event_ad.py  loglead_demo_parsing_regexs  loglead_demo_seq_investigation.py  loglead_demo_token_ad.py  loglead_demo_trigram.py  pyproject.toml  requirements.txt  requirements_no_dl.txt
demo/: DTmodel  Drain_Persistence.py  Explainer_HDFS.py  Explainer_TB.py  HDFS_Cleaned.py  HDFS_samples.py  HDSF_interpretML.ipynb  IF_RM_dummy_test  RM_test_hdfs  RawLoader_NoLabels.py  RawLoader_TimeStamps_Hadoop.py  RawLoader_TimeStamps_Mufano.py  SHAP_TB.py  Shap_HDFS.py  TB_files.py  TB_samples.py  X_test.npy  ad_event.py  ad_seq.py  debug_hadoop_data.py  debug_hdfs_ad_crash  gelf_log.py  knntest.py  labels_test.npy  log_investigation.py  loglead_demo_ad_seq.py  loglead_demo_gelf_log.py  loglead_demo_log_investigation.py  neural_parser.py  p1_load.py  p1_logparser_load.py  p2_drain_parsing.py  p3_parser_comparison  p4_ano_detect_comparison  parsing_regexs  seq_investigation.py  shapedemo1.py  trigram.py  unsupervised_aucroc.py  unsupervised_models.py
demo/paper/: t1_load.py  t2_drain_parsing.py  t3_parser_comparison.py  t4_ano_detect_comparison  t4_ano_detect_comparison.py
demo/parser_benchmark/: ano_detection.py  ano_detection_config.yml  parsing_speed.py  speed_config.yml
demo/parser_speed_tests/: config.yml  parsing_speed.py
demo/robo_mode/: README.md  config.yml  config2.yml  data_specific_preprocessing.py  log_analysis_functions.py  main.py  subset_data_to_new_dir.py
demo/samples/: hdfs_seqs_2percent.parquet
demo/saner_2024_paper/: t1_load.py  t1_logparser_load.py  t2_drain_parsing.py  t3_parser_comparison.py  t4_ano_detect_comparison.py
loglead/: OOV_detector.py  RarityModel.py  __init__.py  anomaly_detection.py  enhancer.py  enricher.py  explainer.py  explainerKnn.py  explainerShap.py  loader.py  next_event_prediction.py  nezha_loader.py
loglead/enhancers/: __init__.py  eventlog.py  sequence.py
loglead/explainers/: nn_explainer.py
loglead/loaders/: __init__.py  adfa.py  awsctd.py  base.py  bgl.py  gelf.py  hadoop.py  hdfs.py  lo2.py  nezha.py  pro.py  raw.py  supercomputers.py
loglead/parsers/: README.md  __init__.py
loglead/parsers/AEL/: AEL.py  README.md
loglead/parsers/Brain/: Brain.py  README.md  __init__.py
loglead/parsers/bert/: bertembedding.py
loglead/parsers/drain3/: README.md  drain.py  drain3.ini
loglead/parsers/iplom/: IPLoM.py
loglead/parsers/lenma/: README.md  lenma.py
loglead/parsers/pl_iplom/: pl_iplom.py
loglead/parsers/pyspell/: README.md  spell.py
parsers/: README.md
parsers/AEL/: AEL.py  README.md
parsers/Brain/: README.md
parsers/bert/: README.md  bertembedding.py
parsers/drain3/: drain3_no_masking.ini
parsers/fast_iplom/: fast_iplom.py
parsers/iplom/: IPLoM.py  README.md
parsers/lenma/: lenma_template.py  template.py
parsers/pl_iplom/: README.md
samples/: hdfs_events_2percent.parquet
tests/: ad_event.py  ad_seq.py  anomaly_detectors.py  config_generator.py  datasets.yml  datasets_generated.yml  download_data.py  enhancers.py  loaders.py  main.py
